--- a/html websites/Meat.html
+++ b/html websites/Meat.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -53,10 +52,6 @@
         <h2 id="wc">Whole Chicken 1KG</h2>
         <h3 id="wcp">Rs 1,380.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Whole Chicken 1KG', 1380.00, '../image/Meats/skinless chicken 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="mbox">
@@ -64,10 +59,6 @@
         <h2 id="s">Sausages 1KG</h2>
         <h3 id="sp">Rs 1,100.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Sausages 1KG', 1100.00, '../image/Meats/Sausages 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="mbox">
@@ -75,10 +66,6 @@
         <h2 id="p">Prawns 1 KG</h2>
         <h3 id="pp">Rs 1,590.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Prawns 1 KG', 1590.00, '../image/Meats/Prawns 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="mbox">
@@ -86,10 +73,6 @@
         <h2 id="f">Fish 1KG</h2>
         <h3 id="fishp">Rs 1,150.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Fish 1KG', 1150.00, '../image/Meats/Fish 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 </div>
 
