--- a/html websites/cart1.html
+++ b/html websites/cart1.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -52,9 +51,9 @@
     <table id="cart-table">
         <thead>
             <tr>
-                <th>Product</th>
+                <th>Prod</th>
                 <th>Price</th>
-                <th>Image</th>
+                <th>Img</th>
                 <th>Qty</th>
                 <th>Tot. Price</th>
                 <th>Del</th>
@@ -134,7 +133,7 @@
         </div>
 
         <div class="cbox">
-            <h2>Meat/Seafood Products</h2>
+            <h2>Meat/Sfd Products</h2>
             <label for="m_s_dropdown">Select the product you want:</label>
             <select id="m_s_dropdown">
                 <option value="Whole Chicken 1KG">Whole Chicken 1KG</option>
