--- a/html websites/dairy.html
+++ b/html websites/dairy.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -62,8 +61,6 @@
                 <br>
                 <h3>Rs 580.00</h3>
                 <br>
-                <button onclick="addToFav('Ambewela Chocolate Milk', 580, '../image/Dairy/Ambewela Chocolate Milk.webp')">Add to Fav</button>
-                <button onclick="addToCart('Ambewela Chocolate Milk', 580, '../image/Dairy/Ambewela Chocolate Milk.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -73,8 +70,6 @@
                 <br>
                 <h3>Rs 550.00</h3>
                 <br>
-                <button onclick="addToFav('Ambewela Non Fat Milk', 550, '../image/Dairy/Ambewela Non Fat Milk.webp')">Add to Fav</button>
-                <button onclick="addToCart('Ambewela Non Fat Milk', 550, '../image/Dairy/Ambewela Non Fat Milk.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -84,8 +79,6 @@
                 <br>
                 <h3>Rs 620.00</h3>
                 <br>
-                <button onclick="addToFav('Kotmale Faluda Flav Milk', 620, '../image/Dairy/Kotmale Faluda Flav Milk.webp')">Add to Fav</button>
-                <button onclick="addToCart('Kotmale Faluda Flav Milk', 620, '../image/Dairy/Kotmale Faluda Flav Milk.webp', 1)">Add to cart</button>
             </div>
         </div>
         <br>
@@ -99,8 +92,6 @@
                 <br>
                 <h3>Rs 1,780.00</h3>
                 <br>
-                <button onclick="addToFav('H.Cow Slices 200g', 1780, '../image/Dairy/Happy Cow Cheddar Slices 200g.webp')">Add to Fav</button>
-                <button onclick="addToCart('H.Cow Slices 200g', 1780, '../image/Dairy/Happy Cow Cheddar Slices 200g.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -110,8 +101,6 @@
                 <br>
                 <h3>Rs 1,790.00</h3>
                 <br>
-                <button onclick="addToFav('Happy cow cheese', 1790, '../image/Dairy/Happy cow cheese.webp')">Add to Fav</button>
-                <button onclick="addToCart('Happy cow cheese', 1790, '../image/Dairy/Happy cow cheese.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -121,8 +110,6 @@
                 <br>
                 <h3>Rs 880.00</h3>
                 <br>
-                <button onclick="addToFav('K. Cheese Spread 175g', 880, '../image/Dairy/Kotmale Cheese Spread 175g.webp')">Add to Fav</button>
-                <button onclick="addToCart('K. Cheese Spread 175g', 880, '../image/Dairy/Kotmale Cheese Spread 175g.webp', 1)">Add to cart</button>
             </div>
         </div>
         <br>
@@ -164,7 +151,7 @@
             </div>
         </div>
     </footer>
-    <script src="../html websites/dairy.html"></script>
+    <script src="../scripts/cart.js"></script>
 </body>
 </html>
 
