--- a/html websites/fruits.html
+++ b/html websites/fruits.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -61,10 +60,6 @@
         <h2>Apple 1KG</h2>
         <h3>Rs 850.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Apple 1KG', 850.00, '../image/fruits/Apple 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="fbox">
@@ -72,10 +67,6 @@
         <h2>Banana 1KG</h2>
         <h3>Rs 305.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Banana 1KG', 305.00, '../image/fruits/Banana 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="fbox">
@@ -83,10 +74,6 @@
         <h2>Grapes 1 KG</h2>
         <h3>Rs 2,300.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Grapes 1 KG', 2300.00, '../image/fruits/Grapes 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="fbox">
@@ -94,10 +81,6 @@
         <h2>Mango 1KG</h2>
         <h3>Rs 545.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Mango 1KG', 545.00, '../image/fruits/Mango 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="fbox">
@@ -105,10 +88,6 @@
         <h2>Papaya</h2>
         <h3>Rs 234.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Papaya 1KG', 234.00, '../image/fruits/Papaya 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 
     <div class="fbox">
@@ -116,9 +95,6 @@
         <h2>Avacado 1KG</h2>
         <h3>Rs 450.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Avacado 1KG', 450.00, '../image/fruits/Avacado 1KG.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 </div>
