--- a/html websites/vegetables.html
+++ b/html websites/vegetables.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -78,61 +77,41 @@
                 <h2>Celery</h2>
                 <h3>Rs 990.00</h3>
                 <br>
-                <button onclick="addToFav('Celery', 990.00, '../image/Vegetables/Celery.webp')">Add to Fav</button>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
+
             <div class="vbox">
                 <img src="../image/Vegetables/Cabbage.webp" alt="Cabbage">
                 <h2>Cabbage</h2>
                 <h3>Rs 144.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Cabbage', 144.00, '../image/Vegetables/Cabbage.webp')">Add to Fav</button>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
+
             <div class="vbox">
                 <img src="../image/Vegetables/Pumpkin.webp" alt="Pumpkin">
                 <h2>Pumpkin</h2>
                 <h3>Rs 60.00</h3>
                 <br>
-                <button onclick="addToFav('Pumpkin', 60.00, '../image/Vegetables/Pumpkin.webp')">Add to Fav</button>
-                </a>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
+
             <div class="vbox">
                 <img src="../image/Vegetables/Tomatoes.webp" alt="Tomatoes">
                 <h2>Tomatoes</h2>
                 <h3>Rs 480.00</h3>
                 <br>
-                <button onclick="addToFav('Tomatoes', 480.00, '../image/Vegetables/Tomatoes.webp')">Add to Fav</button>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
+
             <div class="vbox">
                 <img src="../image/Vegetables/Green Beans (1).webp" alt="Green Beans">
                 <h2>Green Beans</h2>
                 <h3>Rs 304.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Green Beans', 304.00, '../image/Vegetables/Green Beans (1).webp')">Add to Fav</button>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
+
             <div class="vbox">
                 <img src="../image/Vegetables/Cauliflower.webp" alt="Cauliflower">
                 <h2>Cauliflower</h2>
                 <h3>Rs 1,100.00</h3>
                 <br>
-                <button onclick="addToFav('Cauliflower', 1100.00, '../image/Vegetables/Cauliflower.webp')">Add to Fav</button>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
             </div>
         </div>
         <footer>
