--- a/html websites/Ingredients.html
+++ b/html websites/Ingredients.html
@@ -15,12 +15,12 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                       <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
                   </a>
               </div>
               <ul>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
@@ -37,7 +37,6 @@
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
-                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -53,60 +52,40 @@
         <h2>Baking Powder</h2>
         <h3>Rs 350.00</h3>
         <br>
-        <button onclick="addToFav('Baking Powder', 350.00, '../image/Baking/Baking Powder.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
+    
     <div class="ibox">
-        <img src="../image/Baking/Chilli Powder.png" alt="Chilli Powder">
+        <img src="../image/Baking/Chilli Powder.png" alt="../Chilli Powder">
         <h2>Chilli Powder</h2>
         <h3>Rs 260.00</h3>
         <br>
-        <button onclick="addToFav('Chilli Powder', 260.00, '../image/Baking/Chilli Powder.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
+
     <div class="ibox">
         <img src="../image/Baking/Corn Flour.png" alt="Corn Flour">
         <h2>Corn Flour</h2>
         <h3>Rs 135.00</h3>
         <br>
-        <button onclick="addToFav('Corn Flour', 135.00, '../image/Baking/Corn Flour.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
+
     <div class="ibox">
         <img src="../image/Baking/Crystal Salt.png" alt="Crystal Salt">
         <h2>Crystal Salt</h2>
         <h3>Rs 135.00</h3>
         <br>
-        <button onclick="addToFav('Crystal Salt', 135.00, '../image/Baking/Crystal Salt.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
+
     <div class="ibox">
         <img src="../image/Baking/Essence Vanilla.png" alt="Essence Vanilla">
         <h2>Essence Vanilla</h2>
         <h3>Rs 165.00</h3>
         <br>
-        <button onclick="addToFav('Essence Vanilla', 165.00, '../image/Baking/Essence Vanilla.png')">Add to Fav</button>
-        <a href="../html websites/">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
     <div class="ibox">
-        <img src="../image/Baking/Icing Sugar.png" alt="Icing Sugar">
+        <img src="../image/Baking/Icing Sugar.png" alt="../Icing Sugar">
         <h2>Icing Sugar</h2>
         <h3>Rs 240.00</h3>
         <br>
-        <button onclick="addToFav('Icing Sugar', 240.00, '../image/Baking/Icing Sugar.png')">Add to Fav</button>
-        <a href="../html websites/cart1.html">
-            <button id="cart-btn">Add to cart</button>
-        </a>
     </div>
 </div>
 
