--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
       <div id="homecontainer">
         <section id=hb1 class="homebox">
           <h2><u>Dairy Products</u></h2>
-          <center>
             <a href="html websites/dairy.html" target="_blank">
-              <img src="image/dairy products.jpeg" alt="Dairy Products">
+              <img src="image/dairy products.jpeg" alt="Dairy Products" id="dairyimg">
             </a>
-          </center>
           <p>Savor our supermarket's array of dairy delights, from:</p>
           <div class="pro">
             <ol>
@@ -80,7 +78,7 @@
 
         <section id="hb2" class="homebox">
           <h2 class="hb2"><u>Vegetables</u></h2>
-          <center><img src="image/Vegetables.jpeg" alt="Vegetables"></center>
+         <img src="image/Vegetables.jpeg" alt="Vegetables" id="vegimg">
           <p>Our store provides a variety of fresh vegetables, including:</p>
           <div class="pro">
           <ol>
@@ -95,7 +93,7 @@
 
         <section id="hb3" class="homebox">
           <h2 class="hb2"><u>Skincare and Cosmetics</u></h2>
-          <center><img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare"></center>
+          <img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare" id="csimg">
           <p>"Our skincare and cosmetics selection enhances natural radiance with: </p>
           <div class="pro">
           <ol>
