--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id=hb1 class="homebox">
           <h2><u>Dairy Products</u></h2>
             <a href="html websites/dairy.html" target="_blank">
-              <img src="image/dairy products.jpeg" alt="Dairy Products" id="dairyimg">
+              <img src="image/dairy products.jpeg" alt="Dairy Products" id="dairypic">
             </a>
           <p>Savor our supermarket's array of dairy delights, from:</p>
           <div class="pro">
@@ -78,7 +78,7 @@
 
         <section id="hb2" class="homebox">
           <h2 class="hb2"><u>Vegetables</u></h2>
-         <img src="image/Vegetables.jpeg" alt="Vegetables" id="vegimg">
+         <img src="image/Vegetables.jpeg" alt="Vegetables" id="vegpic">
           <p>Our store provides a variety of fresh vegetables, including:</p>
           <div class="pro">
           <ol>
@@ -93,7 +93,7 @@
 
         <section id="hb3" class="homebox">
           <h2 class="hb2"><u>Skincare and Cosmetics</u></h2>
-          <img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare" id="csimg">
+          <img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare" id="cspic">
           <p>"Our skincare and cosmetics selection enhances natural radiance with: </p>
           <div class="pro">
           <ol>
