--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                  <a href="index.html">
-                      <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                  </a>
+                <a href="index.html">
+                  <img src="image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
+                </a>
               </div>
               <ul>
                   <li><a href="index.html">Home</a></li>
