--- a/html websites/Aboutuspage.html
+++ b/html websites/Aboutuspage.html
@@ -14,11 +14,11 @@
     <header>
       <nav class="navbar">
           <div class="navdiv">
-              <div class="logo">
-                  <a href="../index.html">
-                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                  </a>
-              </div>
+            <div class="logo">
+              <a href="../index.html">
+                <img src="../image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
+              </a>
+          </div>
               <ul>
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="../html websites/Aboutuspage.html">About</a></li>
