--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="navdiv">
               <div class="logo">
                 <a href="index.html">
-                  <img src="image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
+                  <img src="../image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
                 </a>
               </div>
               <ul>
@@ -36,8 +36,8 @@
                 <li><a href="../html_websites/Loyaltyregistration.html">Loyal.R</a></li>    
             </ul>
               <div class="nav-buttons">
-                <a href="html websites/cart1.html" class="button-nav">Cart</a>
-            </div>
+                <a href="../htmlwebsites/cart1.html" class="button-nav">Cart</a>
+              </div>
           </div>
       </nav>
   </header>
