--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2>Welcome To <i>"Grocies"</i></h2>
           <p> We prioritize excellence,making sure that only the best ingredients are available for you and your loved ones to enjoy.</p>
           <div class="button-container">
-            <a href="html websites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a><!--Button to the signup page -->
+            <a href="htmlwebsites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a>
           </div>
         </div>
       </div>
