--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <section id="hb3" class="homebox">
           <h2 class="hb2"><u>Skincare and Cosmetics</u></h2>
-          <img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare" id="cspic">
+          <img src="image/cosmeticsandskincare.jpeg" alt="Cosmetics and Skincare" id="cspic">
           <p>"Our skincare and cosmetics selection enhances natural radiance with: </p>
           <div class="pro">
           <ol>
