--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                <a href="index.html">
-                  <img src="../image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
+                <a href="/index.html">
+                  <img src="/image/GROCIES LOGO.png" alt="logo" class="logo-img">
                 </a>
               </div>
               <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../html_websites/Aboutuspage.html">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="html websites/Aboutuspage.html">About</a></li>
                 <li class="dropdown">
                     <a class="dropbtn">Products</a>
                     <div class="dropdown-content">
-                        <a href="../html_websites/dairy.html">Dairy Products</a>
-                        <a href="../html_websites/vegetables.html">Vegetables</a>
-                        <a href="../html_websites/fruits.html">Fresh Fruits</a>
-                        <a href="../html_websites/Meat.html">Meat / Seafood</a>
-                        <a href="../html_websites/Ingredients.html">Ingredients</a>
+                        <a href="/html websites/dairy.html">Dairy Products</a>
+                        <a href="/html websites/vegetables.html">Vegetables</a>
+                        <a href="/html websites/fruits.html">Fresh Fruits</a>
+                        <a href="/html websites/Meat.html">Meat / Seafood</a>
+                        <a href="/html websites/Ingredients.html">Ingredients</a>
                     </div>
                 </li>
-                <li><a href="../html_websites/Orderpage.html">Order</a></li>
-                <li><a href="../html_websites/Loyaltyregistration.html">Loyal.R</a></li>    
+                <li><a href="/html websites/Orderpage.html">Order</a></li>
+                <li><a href="/html websites/Loyaltyregistration.html">Loyal.R</a></li>    
             </ul>
               <div class="nav-buttons">
-                <a href="../htmlwebsites/cart1.html" class="button-nav">Cart</a>
+                <a href="/html websites/cart1.html" class="button-nav">Cart</a>
               </div>
           </div>
       </nav>
@@ -48,7 +48,7 @@
           <h2>Welcome To <i>"Grocies"</i></h2>
           <p> We prioritize excellence,making sure that only the best ingredients are available for you and your loved ones to enjoy.</p>
           <div class="button-container">
-            <a href="htmlwebsites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a>
+            <a href="/html websites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a>
           </div>
         </div>
       </div>
@@ -61,8 +61,8 @@
       <div id="homecontainer">
         <section id=hb1 class="homebox">
           <h2><u>Dairy Products</u></h2>
-          <a href="htmlwebsites/dairy.html" target="_blank">
-            <img src="image/dairyproducts.jpeg" alt="Dairy Products" id="dairypic">
+          <a href="/html websites/dairy.html" target="_blank">
+            <img src="image/dairy products.jpeg" alt="Dairy Products" id="dairypic">
           </a>        
           <p>Savor our supermarket's array of dairy delights, from:</p>
           <div class="pro">
@@ -93,7 +93,7 @@
 
         <section id="hb3" class="homebox">
           <h2 class="hb2"><u>Skincare and Cosmetics</u></h2>
-          <img src="image/cosmeticsandskincare.jpeg" alt="Cosmetics and Skincare" id="cspic">
+          <img src="image/cosmetics and skincare.jpeg" alt="Cosmetics and Skincare" id="cspic">
           <p>"Our skincare and cosmetics selection enhances natural radiance with: </p>
           <div class="pro">
           <ol>
