--- a/html websites/fruits.html
+++ b/html websites/fruits.html
@@ -11,32 +11,32 @@
 
 <body>
   <div id="homepage">
-    <header>
+        <header>
       <nav class="navbar">
           <div class="navdiv">
-            <div class="logo">
-                <a href="../index.html">
-                  <img src="../image/GROCIES%20LOGO.png" alt="logo" class="logo-img">
+              <div class="logo">
+                <a href="/index.html">
+                  <img src="/image/GROCIES LOGO.png" alt="logo" class="logo-img">
                 </a>
-            </div>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../html_websites/Aboutuspage.html">About</a></li>
+              </div>
+              <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="html websites/Aboutuspage.html">About</a></li>
                 <li class="dropdown">
                     <a class="dropbtn">Products</a>
                     <div class="dropdown-content">
-                        <a href="../html_websites/dairy.html">Dairy Products</a>
-                        <a href="../html_websites/vegetables.html">Vegetables</a>
-                        <a href="../html_websites/fruits.html">Fresh Fruits</a>
-                        <a href="../html_websites/Meat.html">Meat / Seafood</a>
-                        <a href="../html_websites/Ingredients.html">Ingredients</a>
+                        <a href="/html websites/dairy.html">Dairy Products</a>
+                        <a href="/html websites/vegetables.html">Vegetables</a>
+                        <a href="/html websites/fruits.html">Fresh Fruits</a>
+                        <a href="/html websites/Meat.html">Meat / Seafood</a>
+                        <a href="/html websites/Ingredients.html">Ingredients</a>
                     </div>
                 </li>
-                <li><a href="../html_websites/Orderpage.html">Order</a></li>
-                <li><a href="../html_websites/Loyaltyregistration.html">Loyal.R</a></li>    
-            </ul>
+                <li><a href="/html websites/Orderpage.html">Order</a></li>
+                <li><a href="/html websites/Loyaltyregistration.html">Loyal.R</a></li>    
+               </ul>
               <div class="nav-buttons">
-                <a href="../htmlwebsites/cart1.html" class="button-nav">Cart</a>
+                <a href="/html websites/cart1.html" class="button-nav">Cart</a>
               </div>
           </div>
       </nav>
