--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <nav class="navbar">
           <div class="navdiv">
               <div class="logo">
-                <a href="/index.html">
-                  <img src="/image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                <a href="index.html">
+                  <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
                 </a>
               </div>
               <ul>
@@ -25,18 +25,18 @@
                 <li class="dropdown">
                     <a class="dropbtn">Products</a>
                     <div class="dropdown-content">
-                        <a href="/html websites/dairy.html">Dairy Products</a>
+                        <a href="html websites/dairy.html">Dairy Products</a>
                         <a href="/html websites/vegetables.html">Vegetables</a>
-                        <a href="/html websites/fruits.html">Fresh Fruits</a>
-                        <a href="/html websites/Meat.html">Meat / Seafood</a>
-                        <a href="/html websites/Ingredients.html">Ingredients</a>
+                        <a href="html websites/fruits.html">Fresh Fruits</a>
+                        <a href="html websites/Meat.html">Meat / Seafood</a>
+                        <a href="html websites/Ingredients.html">Ingredients</a>
                     </div>
                 </li>
-                <li><a href="/html websites/Orderpage.html">Order</a></li>
-                <li><a href="/html websites/Loyaltyregistration.html">Loyal.R</a></li>    
+                <li><a href="html websites/Orderpage.html">Order</a></li>
+                <li><a href="html websites/Loyaltyregistration.html">Loyal.R</a></li>    
             </ul>
               <div class="nav-buttons">
-                <a href="/html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="html websites/cart1.html" class="button-nav">Cart</a>
               </div>
           </div>
       </nav>
@@ -48,7 +48,7 @@
           <h2>Welcome To <i>"Grocies"</i></h2>
           <p> We prioritize excellence,making sure that only the best ingredients are available for you and your loved ones to enjoy.</p>
           <div class="button-container">
-            <a href="/html websites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a>
+            <a href="html websites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a>
           </div>
         </div>
       </div>
