--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 </a>
               </div>
               <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="html websites/Aboutuspage.html">About</a></li>
                 <li class="dropdown">
                     <a class="dropbtn">Products</a>
                     <div class="dropdown-content">
                         <a href="html websites/dairy.html">Dairy Products</a>
-                        <a href="/html websites/vegetables.html">Vegetables</a>
+                        <a href="html websites/vegetables.html">Vegetables</a>
                         <a href="html websites/fruits.html">Fresh Fruits</a>
                         <a href="html websites/Meat.html">Meat / Seafood</a>
                         <a href="html websites/Ingredients.html">Ingredients</a>
@@ -61,7 +61,7 @@
       <div id="homecontainer">
         <section id=hb1 class="homebox">
           <h2><u>Dairy Products</u></h2>
-          <a href="/html websites/dairy.html" target="_blank">
+          <a href="html websites/dairy.html" target="_blank">
             <img src="image/dairy products.jpeg" alt="Dairy Products" id="dairypic">
           </a>        
           <p>Savor our supermarket's array of dairy delights, from:</p>
@@ -137,8 +137,8 @@
             <div class="footer-section" id="sm">
               <p>Follow Us on: </p>
               <br>
-              <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="../image/instagram.png" alt="Instagram Icon"></a>
-              <a href="https://www.tiktok.com/@your_tiktok_username"><img src="../image/tiktok.png" alt="TikTok Icon"></a>
+              <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="image/instagram.png" alt="Instagram Icon"></a>
+              <a href="https://www.tiktok.com/@your_tiktok_username"><img src="image/tiktok.png" alt="TikTok Icon"></a>
             </div>
           </div>
         </div>
