--- a/html websites/Aboutuspage.html
+++ b/html websites/Aboutuspage.html
@@ -15,28 +15,28 @@
       <nav class="navbar">
           <div class="navdiv">
             <div class="logo">
-              <a href="/index.html">
-                <img src="/image/GROCIES LOGO.png" alt="logo" class="logo-img">
+              <a href="index.html">
+                <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
               </a>
           </div>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/html websites/Aboutuspage.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="html websites/Aboutuspage.html">About</a></li>
             <li class="dropdown">
                 <a class="dropbtn">Products</a>
                 <div class="dropdown-content">
-                    <a href="/html websites/dairy.html">Dairy Products</a>
-                    <a href="/html websites/vegetables.html">Vegetables</a>
-                    <a href="/html websites/fruits.html">Fresh Fruits</a>
-                    <a href="/html websites/Meat.html">Meat / Seafood</a>
-                    <a href="/html websites/Ingredients.html">Ingredients</a>
+                    <a href="html websites/dairy.html">Dairy Products</a>
+                    <a href="html websites/vegetables.html">Vegetables</a>
+                    <a href="html websites/fruits.html">Fresh Fruits</a>
+                    <a href="html websites/Meat.html">Meat / Seafood</a>
+                    <a href="html websites/Ingredients.html">Ingredients</a>
                 </div>
             </li>
-            <li><a href="/html websites/Orderpage.html">Order</a></li>
-            <li><a href="/html websites/Loyaltyregistration.html">Loyal.R</a></li>    
+            <li><a href="html websites/Orderpage.html">Order</a></li>
+            <li><a href="html websites/Loyaltyregistration.html">Loyal.R</a></li>    
           </ul>
               <div class="nav-buttons">
-                <a href="/html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="html websites/cart1.html" class="button-nav">Cart</a>
               </div>
           </div>
       </nav>
