--- a/html websites/cart1.html
+++ b/html websites/cart1.html
@@ -106,12 +106,12 @@
             <h2>Vegetable Products</h2>
             <label for="vege_dropdown">Select the product you want:</label>
             <select id="vege_dropdown">
-                <option value="Celery">Celery</option>
-                <option value="Cabbage">Cabbage</option>
-                <option value="Pumpkin">Pumpkin</option>
-                <option value="Tomatoes">Tomatoes</option>
-                <option value="Green Beans">Green Beans</option>
-                <option value="Cauliflower">Cauliflower</option>
+                <option value="Celery 1KG">Celery</option>
+                <option value="Cabbage 1KG">Cabbage</option>
+                <option value="Pumpkin 1KG">Pumpkin</option>
+                <option value="Tomatoes 1KG">Tomatoes</option>
+                <option value="Green Beans 1KG">Green Beans</option>
+                <option value="Cauliflower 1KG">Cauliflower</option>
             </select>
             <div id="vege-product-details"></div>
             <button class="cart-btn" data-category="vegetable">Add to cart</button>
